# differentiable-expression-compiler

./: .gitignore  Makefile  README.md  \  roadmap.md
bench/results/: node_counts.json  symbolic_swell.json
engine/: Cargo.toml
engine/examples/: node_count_bench.rs  symbolic_swell_bench.rs
engine/src/: error.rs  lib.rs  main.rs
engine/src/api/: http.rs  mod.rs
engine/src/autodiff/: backward.rs  forward.rs  jacobian.rs  mod.rs  symbolic.rs  trace.rs
engine/src/graph/: arena.rs  display.rs  key.rs  mod.rs  node.rs  topo.rs
engine/src/linalg/: lu.rs
engine/src/ops/: derivatives.rs  eval.rs  mod.rs
engine/src/optimize/: constfold.rs  cse.rs  deadcode.rs  mod.rs
engine/src/parse/: ast.rs  lexer.rs  lower.rs  mod.rs  parser.rs
engine/src/solver/: ik.rs  mod.rs  newton.rs
engine/tests/: api.rs  finite_diff.rs  symbolic_diff.rs  trace_golden.rs
engine/tests/golden/: trace_sin_xy_plus_x2.json
