[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
